Changelog
=========

Version 1.62
	Fixed exception when right click on gridheaders in revision log
	Last selection and scroll position in revision log are remembered

Version 1.61
	Fixed bug that mergeconflicts of files listed in .gitignore are hidden

Version 1.60
	Fixed bug in Manage remotes dialog

Version 1.59
	Remote branches can be checked out and tracked from the checkout branch dialog
	Manage remote branch dialog improved

Version 1.58
	Added support for Araxis merge and DiffMerge

Version 1.57
	Spelling checker performance improved
	Red wiggly lines added to mark incorrect spelled words	
	Added search dialog to most file viewers
	Added delete tag function to context menu revision grid
	Added add tag function to recover lost objects dialog
	Added enter support to the small create tag and create branch dialogs
	Fixed file history view on deleted or moved files	
	Packed with Git-1.6.1 to avoid a bug in Git-1.6.2
	When installing 64bit version, both 32bit and 64bit shell extensions will be registered
	Application settings are saved when closing settings dialog instead of when application exits
	Revert commit handles merge conflicts better
	Diff in browse dialog now shows the diff between revisions if 2 revisions are selected
	Bug solved: files in diff viewer are not shown correctly when 2 revisions are selected
	Format path dialog improved
	Clone and Initialize dialogs start with directory filled in

Version 1.56
	Settings are saved when dialog is closed not only on OK
	Load PuTTY key dialog is closed after loading key
	Mergeconflicts during apply stash after pull are shown
	Revision log is now refreshed correctly after using stash from toolbar
	Added spelling checker

Version 1.55
	Fetching a branch that does not exists locally will create a new branch with the same name locally
	Open repository after clone improved
	Added 'quick' stash and stash pop
	Some settings are solved silent
	Packed with Git-1.6.2-preview20090308.exe

Version 1.54